# jenos

./: .gitignore  Dockerfile  README.md  dune-project  jenos.opam
scripts/: deploy.sh
src/: app.ml  dune  jenos.ml  latch.ml  latch.mli  scripts.ml
src/discord/: Internal_state.ml  bot.ml  channel.ml  commands.ml  config.ml  dune  env.ml  events.ml  gateway.ml  internal_state.ml  internal_state.mli  message.ml  message.mli  post.ml  rest.ml  router.ml  state.ml  user.ml  ws.ml
src/discord/objects/: dune  message.ml  user.ml
src/discord/rest/: call.ml  channel.ml  dune  gateway.ml
src/jenos/: add_reactions.ml  add_reactions_to_link.ml  add_reactions_to_reply.ml  config.ml  drafting.ml  dune  jenos.ml  make_dnd_poll.ml  make_meeting_poll.ml  make_poll.ml  manage_react_roles.ml  parrot.ml  reddit.ml  regex.ml  regex.mli  send_curses.ml  track_vc.ml
src/jenos/discord/: bot.ml  bot.mli  commands.ml  commands.mli  dune  events.ml  events.mli  internal_state.ml  internal_state.mli  login.ml  login.mli  message.ml  message.mli  protocol.ml  protocol.mli  router.ml  router.mli  ws.ml
src/jenos/discord/objects/: channel.ml  channel.mli  message.ml  message.mli  user.ml  user.mli
src/jenos/discord/rest/: call.ml  call.mli  channel.ml  channel.mli  dune  gateway.ml  gateway.mli
src/jenos/latch/: latch.ml  latch.mli
src/latch/: dune  latch.ml  latch.mli
src/paladins/: analyze.ml  api.ml  call.ml  dune  league.ml  match.ml  mode.ml  player.ml  session.ml  types.ml  win_status.ml
