opam-version: "2.0"
maintainer: "SGrondin"
authors: [
  "SGrondin"
]
synopsis: "SGrondin"
description: """
SGrondin
"""
license: "SGrondin"
tags: []
homepage: "https://github.com/SGrondin/scaffolding"
doc: "https://github.com/SGrondin/scaffolding"
bug-reports: "https://github.com/SGrondin/scaffolding/issues"
depends: [
  "ocaml" {= "4.10.0"}
  "dune" {build & >= "1.9.0"}

  "core" { >= "v0.14.0" }
  "ppx_expect"

  "angstrom" { >= "0.15.0" }

  "lwt" { >= "5.2.0" & < "6.0.0" }
  "lwt_ppx" { >= "2.0.1" & < "3.0.0" }

  "cohttp" { >= "2.5.4" }
  "cohttp-lwt-unix" { >= "2.5.4" }
  "cohttp-lwt-jsoo" { >= "2.5.4" }

  "yojson"
  "ppx_deriving_yojson"

  "tls"

  "websocket"
  "websocket-lwt-unix"
]
